[package]
name = "core3"
version = "0.0.1"
description = "The bare essentials of std::io for use in no_std. Alloc support is optional."
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://codeberg.org/tinted-software/tinted-os"
categories = ["no-std"]

[dependencies]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
nightly = []

[package.metadata.docs.rs]
features = ["nightly"]
